// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-ezOQGI kgyzsy"
  >
    <div
      class="sc-bYMpWt efCdjc"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        type="radio"
        value=""
      />
      <div
        class="sc-kMjNwy bpxqpd"
      />
      <div
        class="sc-ilhmMj ieqlfj"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render 1`] = `
<div>
  <label
    class="sc-ezOQGI kgyzsy"
  >
    <div
      class="sc-bYMpWt jNSpvb"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        type="radio"
        value=""
      />
      <div
        class="sc-kMjNwy fkrtlJ"
      />
      <div
        class="sc-ilhmMj izIeci"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-ezOQGI dxWDVV"
    disabled=""
  >
    <div
      class="sc-bYMpWt jNSpvb"
    >
      <input
        class="sc-jIRcFI bWqaOu"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="sc-kMjNwy hTSHB"
        disabled=""
      />
      <div
        class="sc-ilhmMj cbHLdd"
        disabled=""
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
